--- a/CCS-Uploader/Controllers/Wizard/BrowseView.xib
+++ b/CCS-Uploader/Controllers/Wizard/BrowseView.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <deployment defaultVersion="1070" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
-        <plugIn identifier="com.apple.imagekit.ibplugin" version="5056"/>
+        <deployment identifier="macosx"/>
+        <development version="6300" identifier="xcode"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8191"/>
+        <plugIn identifier="com.apple.imagekit.ibplugin" version="8191"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="BrowseViewController">
@@ -65,7 +66,7 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="1">
             <rect key="frame" x="0.0" y="0.0" width="901" height="460"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
@@ -78,10 +79,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" multipleSelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="24" headerView="5ff-9Y-YHa" viewBased="YES" id="Eum-26-wUS">
-                                <rect key="frame" x="0.0" y="0.0" width="899" height="416"/>
+                                <rect key="frame" x="0.0" y="0.0" width="886" height="0.0"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 <tableViewGridLines key="gridStyleMask" dashed="YES"/>
                                 <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                 <tableColumns>
@@ -612,7 +613,7 @@
                     <rect key="frame" x="53" y="544" width="754" height="23"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" sendsActionOnEndEditing="YES" alignment="left" title="00001" id="aFv-iM-PeA">
-                        <font key="font" size="15" name="LucidaGrande"/>
+                        <font key="font" metaFont="system" size="15"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
@@ -627,7 +628,7 @@
                             <ikImageBrowserView autoresizesSubviews="NO" zoomValue="0.24693240225315094" animates="YES" id="4Ng-qR-G4T">
                                 <rect key="frame" x="0.0" y="0.0" width="782" height="432"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <ikCellsStyle key="cellsStyleMask" none="YES" shadowed="YES" outlined="YES" titled="YES" subtitled="YES"/>
+                                <ikCellsStyle key="cellsStyleMask" shadowed="YES" outlined="YES" titled="YES" subtitled="YES"/>
                                 <autoresizingMask key="contentResizingMask" heightSizable="YES"/>
                                 <size key="cellSize" width="64" height="64"/>
                                 <connections>
@@ -795,17 +796,17 @@ DQ
                         <rect key="frame" x="20" y="53" width="506" height="184"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <clipView key="contentView" id="1IM-l6-kYI">
-                            <rect key="frame" x="1" y="1" width="489" height="182"/>
+                            <rect key="frame" x="1" y="1" width="504" height="182"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textView editable="NO" importsGraphics="NO" richText="NO" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" verticallyResizable="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="etA-Be-cCt">
-                                    <rect key="frame" x="0.0" y="0.0" width="489" height="182"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="504" height="182"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="489" height="182"/>
+                                    <size key="minSize" width="504" height="182"/>
                                     <size key="maxSize" width="506" height="10000000"/>
                                     <color key="insertionPointColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="489" height="182"/>
+                                    <size key="minSize" width="504" height="182"/>
                                     <size key="maxSize" width="506" height="10000000"/>
                                 </textView>
                             </subviews>
@@ -816,7 +817,7 @@ DQ
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="bK5-gY-JCp">
-                            <rect key="frame" x="490" y="1" width="15" height="182"/>
+                            <rect key="frame" x="489" y="1" width="16" height="182"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
@@ -836,17 +837,17 @@ DQ
                         <rect key="frame" x="20" y="61" width="660" height="225"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <clipView key="contentView" id="HJa-rf-Wu6">
-                            <rect key="frame" x="1" y="1" width="643" height="223"/>
+                            <rect key="frame" x="1" y="1" width="658" height="223"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textView editable="NO" importsGraphics="NO" richText="NO" findStyle="panel" usesRuler="YES" usesFontPanel="YES" verticallyResizable="YES" allowsNonContiguousLayout="YES" id="ZZk-pA-zf8">
-                                    <rect key="frame" x="0.0" y="0.0" width="643" height="223"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="658" height="223"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="643" height="223"/>
+                                    <size key="minSize" width="658" height="223"/>
                                     <size key="maxSize" width="660" height="10000000"/>
                                     <color key="insertionPointColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="643" height="223"/>
+                                    <size key="minSize" width="658" height="223"/>
                                     <size key="maxSize" width="660" height="10000000"/>
                                 </textView>
                             </subviews>
@@ -857,7 +858,7 @@ DQ
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="oPI-2w-bR8">
-                            <rect key="frame" x="644" y="1" width="15" height="223"/>
+                            <rect key="frame" x="643" y="1" width="16" height="223"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
@@ -944,7 +945,7 @@ DQ
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView identifier="Name" focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" id="TZN-G2-QJB">
-                                <rect key="frame" x="0.0" y="0.0" width="298" height="247"/>
+                                <rect key="frame" x="0.0" y="0.0" width="298" height="0.0"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -1086,10 +1087,10 @@ Gw
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
                                             <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" headerView="CQA-Ov-aY6" viewBased="YES" id="RjN-4C-63p">
-                                                <rect key="frame" x="0.0" y="0.0" width="758" height="247"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="740" height="0.0"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <size key="intercellSpacing" width="3" height="2"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                                 <tableColumns>
                                                     <tableColumn identifier="Icon" width="24" minWidth="24" maxWidth="1000" id="HYV-vi-dnH">
@@ -1542,15 +1543,15 @@ DQ
     </objects>
     <resources>
         <image name="NSActionTemplate" width="14" height="14"/>
-        <image name="NSAddTemplate" width="8" height="8"/>
+        <image name="NSAddTemplate" width="11" height="11"/>
         <image name="NSAdvanced" width="32" height="32"/>
         <image name="NSFolder" width="32" height="32"/>
-        <image name="NSIconViewTemplate" width="11" height="10"/>
-        <image name="NSMenuMixedStateTemplate" width="10" height="3"/>
+        <image name="NSIconViewTemplate" width="10" height="10"/>
+        <image name="NSMenuMixedStateTemplate" width="10" height="2"/>
         <image name="NSRefreshFreestandingTemplate" width="14" height="14"/>
-        <image name="NSRefreshTemplate" width="10" height="12"/>
+        <image name="NSRefreshTemplate" width="11" height="15"/>
         <image name="NSStatusAvailable" width="16" height="16"/>
-        <image name="NSStopProgressFreestandingTemplate" width="83" height="83"/>
+        <image name="NSStopProgressFreestandingTemplate" width="14" height="14"/>
         <image name="NSUserGroup" width="32" height="32"/>
     </resources>
 </document>
